[gd_scene load_steps=4 format=3 uid="uid://bcwyb2xdhyby4"]

[ext_resource type="Script" uid="uid://bg5ykde1q5bee" path="res://ui/PauseMenu.gd" id="1_8tehv"]
[ext_resource type="Texture2D" uid="uid://7111oytxsyco" path="res://assets/Ui/Theme/Theme Wood/nine_path_bg_2.png" id="1_c7v6e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8tehv"]
texture = ExtResource("1_c7v6e")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
layer = 3
script = ExtResource("1_8tehv")

[node name="BackgroundDim" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="MenuPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8tehv")

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 50

[node name="ButtonContainer" type="VBoxContainer" parent="MenuPanel/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MenuPanel/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="MenuPanel/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "Settings"

[node name="SaveButton" type="Button" parent="MenuPanel/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "Save Game"

[node name="QuitToMenuButton" type="Button" parent="MenuPanel/MarginContainer/ButtonContainer"]
layout_mode = 2
text = "Quit to Menu"
